--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 						<br>
 						<br>
-			            <h2>A Full Stack Developer</h2>
+			            <h2>A Full Stack Developer.</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://www.linkedin.com/in/roopesh-n9/" class="btn btn-primary py-3 px-4">LinkedIn</a> 
