--- a/index.html
+++ b/index.html
@@ -457,6 +457,22 @@
               </div>
             </div>
         </div>
+
+		<div class="col-md-4 d-flex ftco-animate">
+			<div class="blog-entry">
+			<a href="https://github.com/Roopesh-N/GeminiClone.git" class="block-20 zoom-effect" style="background-image: url('images/geminiHome.png'); border-radius: 10px;">
+			</a>
+			<div class="text mt-3 float-right d-block">
+
+			  <h3 class="heading"><a href="https://github.com/Roopesh-N/GeminiClone.git">Crypto_view</a></h3>
+			  <p>Crypto Viewer is a powerful and responsive React application designed to provide users with real-time cryptocurrency data at their fingertips. The app offers a comprehensive overview of the cryptocurrency market by displaying current prices, showcasing trending cryptocurrencies, and visualizing historical data through interactive charts.</p>
+			</div>
+		  </div>
+	  </div>
+
+
+
+
 		<div class="col-md-4 d-flex ftco-animate">
 			<div class="blog-entry justify-content-end">
 			<a href="https://github.com/Roopesh-N/React_Food_Delivery.git" class="block-20 zoom-effect" style="background-image: url('images/food_Delivery_project.png'); border-radius: 10px;">
