--- a/index.html
+++ b/index.html
@@ -464,11 +464,28 @@
 			</a>
 			<div class="text mt-3 float-right d-block">
 
-			  <h3 class="heading"><a href="https://github.com/Roopesh-N/GeminiClone.git">Crypto_view</a></h3>
-			  <p>Crypto Viewer is a powerful and responsive React application designed to provide users with real-time cryptocurrency data at their fingertips. The app offers a comprehensive overview of the cryptocurrency market by displaying current prices, showcasing trending cryptocurrencies, and visualizing historical data through interactive charts.</p>
+			  <h3 class="heading"><a href="https://github.com/Roopesh-N/GeminiClone.git">GeminiAI Clone</a></h3>
+			  <p>
+				Developed a responsive GeminiAI Clone, leveraging the GeminiAI API to deliver accurate, real-time AI-driven insights and responses. The project involved designing and implementing a user-friendly frontend with React, ensuring a smooth and intuitive user experience across devices. Integrated the GeminiAI API to enable interactive AI functionality, enhancing user engagement and feature richness. Optimized component performance through React best practices, resulting in a highly efficient and scalable application. The project showcases my skills in API integration, state management, and building interactive UIs using React.
+				Key Technologies: React, JavaScript, GeminiAI API, CSS
+			  </p>
 			</div>
 		  </div>
 	  </div>
+
+	  <div class="col-md-4 d-flex ftco-animate">
+		<div class="blog-entry">
+		<a href="https://github.com/Roopesh-N/devConnectWeb.git" class="block-20 zoom-effect" style="background-image: url('images/devConnect.png'); border-radius: 10px;">
+		</a>
+		<div class="text mt-3 float-right d-block">
+
+		  <h3 class="heading"><a href="https://github.com/Roopesh-N/devConnectWeb.git">Developers Connect</a></h3>
+		  <p>
+			Developers Connect, using React and Node.js, designed to connect developers based on matching skills, interests, and professional goals. Users create profiles highlighting their tech stack, expertise, and interests, with the app's matching algorithm suggesting potential connections based on relevance and compatibility. Integrated real-time chat for instant messaging, enabling developers to  collaborate, and share ideas seamlessly. The project demonstrates my expertise in user-centered design, frontend and backend integration, and creating dynamic, real-time applications.
+		  </p>
+		</div>
+	  </div>
+  </div>
 
 
 
