--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 
 			  <h3 class="heading"><a href="https://github.com/Roopesh-N/GeminiClone.git">GeminiAI Clone</a></h3>
 			  <p>
-				Developed a responsive GeminiAI Clone, leveraging the GeminiAI API to deliver accurate, real-time AI-driven insights and responses. The project involved designing and implementing a user-friendly frontend with React, ensuring a smooth and intuitive user experience across devices. Integrated the GeminiAI API to enable interactive AI functionality, enhancing user engagement and feature richness. Optimized component performance through React best practices, resulting in a highly efficient and scalable application. The project showcases my skills in API integration, state management, and building interactive UIs using React.
+				Developed a responsive GeminiAI Clone, leveraging the GeminiAI API to deliver accurate, real-time AI-driven insights and responses. Integrated the GeminiAI API to enable interactive AI functionality, enhancing user engagement and feature richness. Optimized component performance through React best practices, resulting in a highly efficient and scalable application. The project showcases my skills in API integration, state management, and building interactive UIs using React.
 				Key Technologies: React, JavaScript, GeminiAI API, CSS
 			  </p>
 			</div>
@@ -481,7 +481,7 @@
 
 		  <h3 class="heading"><a href="https://github.com/Roopesh-N/devConnectWeb.git">Developers Connect</a></h3>
 		  <p>
-			Developers Connect, using React and Node.js, designed to connect developers based on matching skills, interests, and professional goals. Users create profiles highlighting their tech stack, expertise, and interests, with the app's matching algorithm suggesting potential connections based on relevance and compatibility. Integrated real-time chat for instant messaging, enabling developers to  collaborate, and share ideas seamlessly. The project demonstrates my expertise in user-centered design, frontend and backend integration, and creating dynamic, real-time applications.
+			Developers Connect, using MERN Stack, designed to connect developers based on matching skills, interests, and professional goals. Users create profiles highlighting their tech stack, expertise, and interests, with the app's matching algorithm suggesting potential connections based on relevance and compatibility. Integrated real-time chat for instant messaging, enabling developers to collaborate, and share ideas seamlessly. The project demonstrates my expertise in user-centered design, frontend and backend integration, real-time applications.
 		  </p>
 		</div>
 	  </div>
