--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 						<br>
 						<br>
-			            <h2>A Full Stack Developer.</h2>
+			            <h2>A Frontend Developer.</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://www.linkedin.com/in/roopesh-n9/" class="btn btn-primary py-3 px-4">LinkedIn</a> 
@@ -363,7 +363,7 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">June 2020- July 2022</span>
-						<h2>Python developer</h2>
+						<h2>Frontend developer</h2>
 						<span class="position">Magna Infotech</span>
 						<!-- <p class="mt-4">iQuanti is a data-driven digital marketing analytics and solutions company, helps top 100 global brands. 
 							<ul>
