--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             <p></p>
 			<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/1uI0n01hMY1De3ZZBWxkeyVk3xFsoSTkq/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download</a></p>
+    				<p><a href="https://drive.google.com/file/d/1h8u-oIU5AU8RUmMO-LlbPdQyDHSzA3NO/view?usp=sharing" class="btn btn-primary py-4 px-5">Download</a></p>
     			</div>
     		</div>
           </div>
